renamed project in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "the-ever-work",
+	"name": "west-denver-auto-framework",
 	"description": "Sample UI/API Testing Framework for West Denver Test Engineering Meetup",
 	"version": "0.0.1",
 	"scripts": {
